--- a/app/views/artists/new.html.erb
+++ b/app/views/artists/new.html.erb
@@ -1,2 +1,6 @@
 <%= form_for(@aritst) do |f| %>
+<%= f.label :name %>
+<%= f.text_field :name %>
+<%= f.label :bio %>
+<%= f.text_field :bio %>
 <% end %>
