--- a/app/views/artists/new.html.erb
+++ b/app/views/artists/new.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@aritst) do |f| %>
+<%= form_for(@artist) do |f| %>
 <%= f.label :name %>
 <%= f.text_field :name %>
 <%= f.label :bio %>
